Try to fix flickering caused by ads

--- a/sass/modules/_ad.scss
+++ b/sass/modules/_ad.scss
@@ -6,6 +6,14 @@
   width: 300px;
 }
 
+
+/*Fix flickering caused by ads*/
+[id^=placement_] img {
+  height: 250px;
+  width: 300px;
+}
+
+
 .ad {
   /*@include container();*/
 
